--- a/index.html
+++ b/index.html
@@ -31,9 +31,13 @@
     <a href="home/4/Div_Frame.html" target="_blank">FRAME</a>--проверено<br>
     <a href="home/6/chess.html" target="_blank">5.60</a>--проверено<br>
     <a href="home/5/maket_table.html" target="_blank">TABLE</a>--проверено<br>
-    <a href="home/5/maket_div.html" target="_blank">DIV</a><br>
     <a href="home/6/linsk.html" target="_blank">Links</a>--проверено<br>
     <a href="home/7/css-chess.html" target="_blank">Chess</a>--проверено<br>
+    <a href="home/5/maket_div.html" target="_blank">DIV</a>--испарвлено, можно проверить<br>
+    <a href="home/6/chLb.html" target="_blank">chlb</a><br>
+    <a href="home/6/chLbg.html" target="_blank">chlbg</a><br>
+    <a href="home/6/stars.html" target="_blank">Stars</a><br>
+
 
     </div>
     <div><h4>Add</h4>
