--- a/projects/1/index.html
+++ b/projects/1/index.html
@@ -46,6 +46,7 @@
             <li class="lilast">Sale</li>
             <li class="rasporka"></li>
         </ul>
+      <div class="rasporka"></div>
     </div>
   </div> 
   <div class="banner">
@@ -55,5 +56,83 @@
         <div class="button">Button</div>
     </div>
   </div>
+  <div class="catalog">
+    <div class="container">
+      <div class="filter">
+        <h3>Snowboards</h3>
+        <p>Cattegories</p>
+        <img src="img/Vector.png" alt="v">
+        <p>All-Mauntain Snowboards (51)</p>
+        <p>View more...</p>
+        <img src="img/Line 13.png" alt="">
+        <p>Gender</p>
+        <img src="img/Vector.png" alt="v">
+        <ul>
+          <li>Men’ (6)</li>
+          <li>Women’s (32)</li>
+          <li>Unisex (52)</li>
+        </ul>
+        <p>View more...</p>
+        <img src="img/Line 13.png" alt="">
+        <p>Brans</p>
+        <img src="img/Vector.png" alt="v">
+        <ul>
+          <li>Arbor (19)</li>
+          <li>Bataleon (6)</li>
+          <li>Capita (14)</li>
+        </ul>
+        <p>View more...</p>
+        <img src="img/Line 13.png" alt="">
+        <p>Snowboards Lenght (cm)</p>
+        <img src="img/Vector.png" alt="v">
+        <ul>
+          <li>80 to 149 (39)</li>
+          <li>150 to 159 (79)</li>
+          <li>160 to 169 (36)</li>
+        </ul>
+        <p>View more...</p>
+        <img src="img/Line 13.png" alt="">
+        <p>Snowboards Shape</p>
+        <img src="img/Vector.png" alt="v">
+        <ul>
+          <li>Directional (39)</li>
+          <li>Directional Twin (36)</li>
+          <li>True Twin (26)</li>
+        </ul>
+        <p>View more...</p>
+        <img src="img/Line 13.png" alt="">
+        <p>Snowboards Style</p>
+        <img src="img/Vector.png" alt="v">
+        <ul>
+          <li>All-Mountain (64)</li>
+          <li>Freeride (22)</li>
+          <li>Freestyle (22)</li>
+        </ul>
+        <p>View more...</p>
+        <img src="img/Line 13.png" alt="">
+        <p>Price</p>
+        <img src="img/Vector.png" alt="v">
+        <ul>
+          <li>$50.00 to $99.99 (1)</li>
+          <li>$100.00 to $199.99 (1)</li>
+          <li>$200.00 to $499.99 (52)</li>
+        </ul>
+        <p>View more...</p>
+        <img src="img/Line 13.png" alt="">
+        <p>Snowbord Profile</p>
+        <img src="img/V2.png" alt="v">
+        <img src="img/Line 13.png" alt="">
+        <p>Flex</p>
+        <img src="img/V2.png" alt="v">
+      </div>
+      <div class="products"></div>
+      
+        170 Matches found
+        View 9 <img src="img/V2.png" alt="">
+        Sort by <span>Most Popular</span><img src="img/V2.png" alt="">
+    
+    </div>
+  </div>
+
 </body>
 </html>
