--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
     <a href="home/6/chLb.html" target="_blank">chlb</a><br>
     <a href="home/6/chLbg.html" target="_blank">chlbg</a><br>
     <a href="home/6/stars.html" target="_blank">Stars</a><br>
+    <a href="home/7/maket_div_adapt/maket_div.html" target="_blank">Adapt</a><br>
 
 
     </div>
