--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         body{background-color: rgb(243, 220, 209);}
         h2{color: darkslategrey; margin: 20px; margin-left: 20%; float: left;}
         .header {float: none; width: 100%;}
-        .project {margin-left: -20px; margin-top: 50px;}
+        .project {margin-left: -20px; margin-top: 50px; display: none;}
     </style>
 </head>
 <body>
@@ -38,6 +38,7 @@
     <a href="home/6/chLbg.html" target="_blank">chlbg</a><br>
     <a href="home/6/stars.html" target="_blank">Stars</a><br>
     <a href="home/7/maket_div_adapt/maket_div.html" target="_blank">Adapt</a><br>
+    <a href="home/8/form.html" target="_blank">Form</a><br>
 
 
     </div>
