--- a/index.html
+++ b/index.html
@@ -33,10 +33,10 @@
     <a href="home/5/maket_table.html" target="_blank">TABLE</a>--проверено<br>
     <a href="home/6/linsk.html" target="_blank">Links</a>--проверено<br>
     <a href="home/7/css-chess.html" target="_blank">Chess</a>--проверено<br>
-    <a href="home/6/chLb.html" target="_blank">chlb</a><br>--проверено<br>
-    <a href="home/6/chLbg.html" target="_blank">chlbg</a><br>--проверено<br>
-    <a href="home/6/stars.html" target="_blank">Stars</a><br>--проверено<br>
-    <a href="home/7/maket_div_adapt/maket_div.html" target="_blank">Adapt</a><br>--проверено<br>
+    <a href="home/6/chLb.html" target="_blank">chlb</a>--проверено<br>
+    <a href="home/6/chLbg.html" target="_blank">chlbg</a>--проверено<br>
+    <a href="home/6/stars.html" target="_blank">Stars</a>--проверено<br>
+    <a href="home/7/maket_div_adapt/maket_div.html" target="_blank">Adapt</a>--проверено<br>
     <a href="home/5/maket_div.html" target="_blank">DIV</a>--испарвлено, можно проверить<br>
     <a href="home/8/form.html" target="_blank">Form</a><br>
     <a href="home/8/maket_abs.html" target="_blank">Abs</a><br>
