--- a/FinalProject/page1.html
+++ b/FinalProject/page1.html
@@ -11,7 +11,7 @@
 <body>
     <div class="header">
         <div class="container">
-            <div class="Logo"><img src="img/Logo.png" alt="logo"></div>
+            <div class="Logo"><img src="img/Vector (3).png" alt="logo"><h3>Louvre</h3></div>
             <ul class="menu">
                 <li><a href="">Visiting</a></li>
                 <li><a href="">Eplore</a></li>
@@ -25,13 +25,78 @@
     <div class="banner">
         <div class="container">
         <div class="name">
-        <h1>WELCOME <br> TO THE LOUVRE <br>
+        <h1>Welcome <br> to the Louvre <br>
         <span>From the castle to the museum<span></h1>
         <div class="button">Discover the Louvre</div></div>
         <div><img src="img/1.png" alt="banner">    </div>
-        <div class="pages">tut budet perekluchenie</div>  
+        <div class="pages">01 | 05</div>  
         </div> 
- 
+     </div>
+     <div class="virtualTour">
+         <div class="container">
+             <h2>Virtual tour</h2>
+             <div class="line"></div>
+             <div class="cardsPlaces">
+                 <ul>
+                     <li>
+                         <img src="img/RoyalPalace.png" alt="RoyalPalace"> <br>
+                         <h3>Royal Palace</h3><br>
+                         <div class="line"></div><br>
+                         <p>360° Virtual Tour<br>
+                         <span>Google Street Panorama View</span></p>
+                     </li>
+                     <li>
+                        <img src="img/DenonWing.png" alt="DenonWing"> <br>
+                        <h3>Denon Wing</h3><br>
+                        <div class="line"></div><br>
+                        <p>360° Virtual Tour<br>
+                        <span>Google Street Panorama View</span></p>
+                    </li>
+                    <li>
+                        <img src="img/ColonnadePerrault.png" alt="ColonnadePerrault"> <br>
+                        <h3>Colonnade Perrault</h3><br>
+                        <div class="line"></div><br>
+                        <p>360° Virtual Tour<br>
+                        <span>Google Street Panorama View</span></p>
+                    </li>
+                    <li>
+                        <img src="img/GreekHall.png" alt="Greek hall"> <br>
+                        <h3>Greek hall</h3><br>
+                        <div class="line"></div><br>
+                        <p>360° Virtual Tour<br>
+                        <span>Google Street Panorama View</span></p>
+                    </li>
+                    <li>
+                        <img src="img/MonaLisa.png" alt="MonaLisa"> <br>
+                        <h3>Mona Lisa</h3><br>
+                        <div class="line"></div><br>
+                        <p>360° Virtual Tour<br>
+                        <span>Google Street Panorama View</span></p>
+                    </li>
+                    <li>
+                        <img src="img/NightPalace.png" alt="Night Palace"> <br>
+                        <h3>Night Palace</h3><br>
+                        <div class="line"></div><br>
+                        <p>360° Virtual Tour<br>
+                        <span>Google Street Panorama View</span></p>
+                    </li>
+                 </ul>
+             </div>
+
+         </div>
+     </div>
+    <div class="explorer">
+        <div class="container">
+            <div class="text">
+                <h2>Picture explore</h2>
+                <div class="line"></div>
+                <p>Las Meninas is a 1656 painting by Diego Velázquez, the leading artist of the Spanish Golden Age.</p><br>
+                <p>It was cleaned in 1984 to remove a <span> yellow veil"</span> of dust that had gathered since the previous restoration in the 19th century.</p><br>
+                <p>The cleaning provoked furious protests, not because the picture had been damaged in any way, but because it looked different.</p><br>
+            </div>
+            <div class="picture"><img src="img/Rectangle (1).png" alt="yellow">
+            <img src="img/Rectangle.png" alt="whit"></div>
+        </div>
     </div>
 
 </body>
