--- a/FinalProject/page1.html
+++ b/FinalProject/page1.html
@@ -89,13 +89,22 @@
         <div class="container">
             <div class="text">
                 <h2>Picture explore</h2>
+                
                 <div class="line"></div>
                 <p>Las Meninas is a 1656 painting by Diego Velázquez, the leading artist of the Spanish Golden Age.</p><br>
-                <p>It was cleaned in 1984 to remove a <span> yellow veil"</span> of dust that had gathered since the previous restoration in the 19th century.</p><br>
+                <p>It was cleaned in 1984 to remove a <span> "yellow veil"</span> of dust that had gathered since the previous restoration in the 19th century.</p><br>
                 <p>The cleaning provoked furious protests, not because the picture had been damaged in any way, but because it looked different.</p><br>
             </div>
             <div class="picture"><img src="img/Rectangle (1).png" alt="yellow">
             <img src="img/Rectangle.png" alt="whit"></div>
+        </div>
+    </div>
+    <div class="videoJourney">
+        <div class="container">
+            <div class="text">
+            <h1>Video journey</h1>
+            <p>Enter and visit one of the most famous museums in the world and enjoy masterpieces such as Mona Lisa or Hammurabi's Code</p>
+        </div>
         </div>
     </div>
 
