--- a/FinalProject/page1.html
+++ b/FinalProject/page1.html
@@ -14,7 +14,7 @@
             <div class="Logo"><img src="img/Vector (3).png" alt="logo"><h3>Louvre</h3></div>
             <ul class="menu">
                 <li><a href="">Visiting</a></li>
-                <li><a href="">Eplore</a></li>
+                <li><a href="">Explore</a></li>
                 <li><a href="">Video</a></li>
                 <li><a href="">Gallery</a></li>
                 <li><a href="">Tickets</a></li>
@@ -105,6 +105,19 @@
             <h1>Video journey</h1>
             <p>Enter and visit one of the most famous museums in the world and enjoy masterpieces such as Mona Lisa or Hammurabi's Code</p>
         </div>
+        <iframe width=100% height=735 src="https://www.youtube.com/embed/xdiTy_YjVvg?start=1" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        <div class="videos">
+            <iframe src="https://www.youtube.com/embed/pUsJEHQz2E4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <iframe  src="https://www.youtube.com/embed/QIiija9soLE" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <iframe src="https://www.youtube.com/embed/RniS4FZA50Y" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
+
+        </div> 
+        </div>
+    </div>
+    <div class="artGellery">
+        <div class="container">
+
         </div>
     </div>
 
