--- a/home/4/area.html
+++ b/home/4/area.html
@@ -7,7 +7,7 @@
     <title>AREA</title>
     <style>
         img{display: block;
-            margin: 0 auto;
+        .margin: 0 auto;
         border: 1px solid red;}
         h3{text-align: center;}
     </style>
