--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
         h2{color: darkslategrey; margin: 20px; margin-left: 20%; float: left;}
         .header {float: none; width: 100%;}
         .project {margin-left: -20px; margin-top: 50px; display: none;}
+        a{color: black;}
+        a:hover{color: grey;}
     </style>
 </head>
 <body>
@@ -40,6 +42,12 @@
     <a href="home/5/maket_div.html" target="_blank">DIV</a>--испарвлено, можно проверить<br>
     <a href="home/8/form.html" target="_blank">Form</a><br>
     <a href="home/8/maket_abs.html" target="_blank">Abs</a><br>
+    <a href="home/5/maket_divfix.html" target="_blank">Fix</a><br>
+    <a href="home/all/check.html" target="_blank">Check</a><br>
+    <a href="home/all/gallery.html" target="_blank">Video</a><br>
+    <a href="home/all/anketa.html" target="_blank">if</a><br>
+    <a href="home/all/ank.html" target="_blank">?</a><br>
+
 
 
     </div>
@@ -55,6 +63,7 @@
     <a href="home/4/area.html" target="_blank">Area</a>--проверено<br>
     <a href="home/4/nocut.html" target="_blank">Nocut</a>--проверено<br>
     <a href="home/5/ball12.html" target="_blank">Ball12</a>--проверено<br>
+    
 
     </div>
     <div class="project">
