--- a/FinalProject/page1.html
+++ b/FinalProject/page1.html
@@ -29,7 +29,7 @@
         <span>From the castle to the museum<span></h1>
         <div class="button">Discover the Louvre</div></div>
         <div><img src="img/1.png" alt="banner">    </div>
-        <div class="pages">01 | 05</div>  
+        <div class="pages"></div>  
         </div> 
      </div>
      <div class="virtualTour">
@@ -102,7 +102,7 @@
     <div class="videoJourney">
         <div class="container">
             <div class="text">
-            <h1>Video journey</h1>
+            <h2>Video journey</h2>
             <p>Enter and visit one of the most famous museums in the world and enjoy masterpieces such as Mona Lisa or Hammurabi's Code</p>
         </div>
         <iframe width=100% height=735 src="https://www.youtube.com/embed/xdiTy_YjVvg?start=1" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
@@ -115,8 +115,20 @@
         </div> 
         </div>
     </div>
-    <div class="artGellery">
+    <div class="artGallery">
         <div class="container">
+        <h2>Art Gallery</h2>
+       <div class="gallery">
+        <div><a href="https://wikipedia.tel/%D0%94%D0%B8%D0%B0%D0%BD%D0%B0_%D0%92%D0%B5%D1%80%D1%81%D0%B0%D0%BB%D1%8C%D1%81%D0%BA%D0%B0%D1%8F"><img src="img/galery2 1.png" alt=""></a></div>
+        <div><a href="https://ru.wikipedia.org/wiki/%D0%90%D0%BC%D1%83%D1%80_%D0%B8_%D0%9F%D1%81%D0%B8%D1%85%D0%B5%D1%8F_(%D0%9A%D0%B0%D0%BD%D0%BE%D0%B2%D0%B0)"><img src="img/galery1 1.png" alt=""></a></div>
+        <div><a href=""><img src="img/galery7 1.png" alt=""></a></div>
+        <div><a href="https://www.louvre.fr/en/explore/the-palace/ideal-greek-beauty"><img src="img/galery9 1.png" alt="Венера милосская"></a></div>
+        <div><a href="https://wikipedia.tel/%D0%94%D0%B8%D0%B0%D0%BD%D0%B0_%D0%92%D0%B5%D1%80%D1%81%D0%B0%D0%BB%D1%8C%D1%81%D0%BA%D0%B0%D1%8F"><img src="img/galery8 1.png" alt=""></a></div>
+        <div><a href="https://wikipedia.tel/%D0%94%D0%B8%D0%B0%D0%BD%D0%B0_%D0%92%D0%B5%D1%80%D1%81%D0%B0%D0%BB%D1%8C%D1%81%D0%BA%D0%B0%D1%8F"><img src="img/galery2 1.png" alt=""></a></div>
+
+        
+    </div>
+
 
         </div>
     </div>
