--- a/index.html
+++ b/index.html
@@ -63,12 +63,10 @@
     <a href="home/4/area.html" target="_blank">Area</a>--проверено<br>
     <a href="home/4/nocut.html" target="_blank">Nocut</a>--проверено<br>
     <a href="home/5/ball12.html" target="_blank">Ball12</a>--проверено<br>
-    
+    <h1><a href="FinalProject/page1.html">Final poroject</a></h1>
 
     </div>
-    <div class="project">
-    <a href="projects/1/index.html" target="_blank">Project "FLOAT"</a><br>  
-    </div>
+
  <hr>
     <div class="lessons"><h4>Lessons</h4>
     <a href="lessons/Color/color.html" target="blank">Color</a><br>
